Project Development FInished
- Pictures ==> DONE
- Rentals Deletion ==> DONE
- Messages Creation and Deletion ==> DONE