@@ -1,8 +1,11 @@
 package com.chatop.api.service;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
+import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -23,17 +26,21 @@ public class RentalService {
 
     /**
      * Get all rentals
-     * 
+     *
      * @return all rentals
      */
     public List<Rental> getAllRentals() {
-        System.out.println("RentalService.getAllRentals");
-        return rentalRepository.findAll().stream().toList();
+        // Retrieve all rentals from the repository
+        List<Rental> allRentals = rentalRepository.findAll();
+
+        return allRentals.stream()
+            .sorted(Comparator.comparing(Rental::getCreated_at).reversed())
+            .collect(Collectors.toList());
     }
 
     /**
      * Get rental by id
-     * 
+     *
      * @param id the id of the rental
      * @return the rental
      */
@@ -43,7 +50,7 @@ public class RentalService {
 
     /**
      * Add rental
-     * 
+     *
      * @param rental the rental to add
      */
     public void addRental(Rental rental) {
@@ -52,7 +59,7 @@ public class RentalService {
 
     /**
      * Update rental
-     * 
+     *
      * @param rental the rental to update
      */
     public void updateRental(Rental rental) {
@@ -61,10 +68,11 @@ public class RentalService {
 
     /**
      * Delete rental
-     * 
+     *
      * @param id the id of the rental to delete
      */
     public void deleteRental(Integer id) {
+        System.out.println("Deleting rental with id: " + id);
         rentalRepository.deleteById(id);
     }
 }
